# Indian-Power-Grid-Analysis

./: .gitignore  Data Conversion to csv.ipynb  EDA.ipynb  Indian_Power_Grid_Analysis.pptx  README.md  pyproject.toml  sample_data.csv
.ipynb_checkpoints/: EDA-checkpoint.ipynb
